kuber-homeworks_1.4/app/deployment-backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: back
spec:
  replicas: 1
  selector:
    matchLabels:
      app: multi
  template:
    metadata:
      labels:
        app: multi
    spec:
      containers:
      - name: multitool
        image: wbitt/network-multitool:latest
        ports:
          - containerPort: 80
            name: http-port
