kuber-homeworks_1.4/app/deployment-multi-container.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: multi-app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: multiapp
  template:
    metadata:
      labels:
        app: multiapp
    spec:
      containers:
      - name: nginx
        image: nginx:latest
        ports:
        - containerPort: 80
      - name: multitool
        image: wbitt/network-multitool:latest
        ports:
          - containerPort: 8080
            name: http-port
