kuber-homeworks_1.4/app/service-backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-back
spec:
  ports:
    - name: multitool
      port: 80
      protocol: TCP
      targetPort: 80
  selector:
      app: multi
