kuber-homeworks_1.4/app/service-clusterip.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-cluster
spec:
  ports:
    - name: nginx
      port: 9001
      protocol: TCP
      targetPort: 80
    - name: multitool
      port: 9002
      protocol: TCP
      targetPort: 8080
  selector:
      app: multiapp
