kuber-homeworks_1.4/app/service-frontend.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-front
spec:
  ports:
    - name: nginx
      port: 80
      protocol: TCP
      targetPort: 80
  selector:
      app: nginx
