kuber-homeworks_1.4/app/service-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-nodeport
spec:
  ports:
    - name: nginx
      port: 80
      protocol: TCP
      nodePort: 30080
  selector:
      app: multiapp
  type: NodePort
